# fastapi-fullauth

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
adapters/: index.html
adapters/custom/: index.html
adapters/memory/: index.html
adapters/sqlalchemy/: index.html
adapters/sqlmodel/: index.html
api-reference/: index.html
architecture/: index.html
auth/custom-claims/: index.html
auth/dependencies/: index.html
auth/hooks/: index.html
auth/passwords/: index.html
auth/sessions/: index.html
configuration/: index.html
contributing/: index.html
customization/: index.html
docs/: api-reference.md  architecture.md  configuration.md  contributing.md  customization.md  frontend-integration.md  getting-started.md  index.md  llms-full.txt  llms.txt  migrations.md  oauth.md  passkeys.md  recipes.md  testing.md  troubleshooting.md
docs/adapters/: custom.md  index.md  memory.md  sqlalchemy.md  sqlmodel.md
docs/auth/: custom-claims.md  dependencies.md  hooks.md  passwords.md  sessions.md
docs/security/: middleware.md  rate-limiting.md
docs/stylesheets/: home.css
examples/: basic_app.py  email_verification_app.py  memory_app.py  sqlalchemy_app.py  sqlmodel_app.py
examples/memory_app/: auth.py  main.py
examples/sqlalchemy_app/: auth.py  config.py  main.py  models.py  routes.py
examples/sqlmodel_app/: auth.py  config.py  main.py  models.py
fastapi_fullauth/: __init__.py  cli.py  config.py  exceptions.py  fullauth.py  hooks.py  migrations.py  types.py  utils.py  validators.py
fastapi_fullauth/.agents/skills/fastapi-fullauth/: SKILL.md
fastapi_fullauth/.agents/skills/fastapi-fullauth/references/: adapters.md  api-reference.md  composable-design.md  getting-started.md  hooks.md  migrations.md  oauth.md  passkeys.md  production.md  rbac.md  sessions.md  testing.md  troubleshooting.md
fastapi_fullauth/adapters/: __init__.py  _sqlalchemy_base.py  base.py  memory.py  sqlalchemy.py  sqlmodel.py
fastapi_fullauth/adapters/sqlalchemy/: __init__.py  adapter.py  models.py
fastapi_fullauth/adapters/sqlalchemy/models/: __init__.py  base.py  oauth.py  passkey.py  permission.py  role.py
fastapi_fullauth/adapters/sqlmodel/: __init__.py  adapter.py  models.py
fastapi_fullauth/adapters/sqlmodel/models/: __init__.py  base.py  oauth.py  passkey.py  permission.py  role.py
fastapi_fullauth/backends/: __init__.py  base.py  bearer.py  cookie.py
fastapi_fullauth/core/: __init__.py  blacklist.py  challenges.py  crypto.py  redis_blacklist.py  tokens.py
fastapi_fullauth/dependencies/: __init__.py  current_user.py  rbac.py  require_role.py
fastapi_fullauth/flows/: __init__.py  change_password.py  email_verify.py  login.py  logout.py  oauth.py  passkey.py  password_reset.py  profile.py  register.py  sessions.py  set_password.py  tokens.py
fastapi_fullauth/middleware/: __init__.py  csrf.py  ratelimit.py  security_headers.py
fastapi_fullauth/migrations/: __init__.py  helpers.py
fastapi_fullauth/models/: __init__.py
fastapi_fullauth/models/sqlalchemy/: __init__.py  base.py  oauth.py  passkey.py  permission.py  role.py
fastapi_fullauth/models/sqlmodel/: __init__.py  base.py  oauth.py  passkey.py  permission.py  role.py
fastapi_fullauth/oauth/: __init__.py  base.py  github.py  google.py
fastapi_fullauth/protection/: __init__.py  challenges.py  lockout.py  ratelimit.py
fastapi_fullauth/rbac/: __init__.py
fastapi_fullauth/router/: __init__.py  _models.py  admin.py  auth.py  oauth.py  passkey.py  profile.py  verify.py
fastapi_fullauth/routers/: __init__.py  _schemas.py  _transport.py  admin.py  auth.py  oauth.py  passkey.py  profile.py  sessions.py  verify.py
frontend-integration/: index.html
getting-started/: index.html
migrations/: index.html
oauth/: index.html
passkeys/: index.html
recipes/: index.html
search/: search_index.json
security/middleware/: index.html
security/rate-limiting/: index.html
stylesheets/: home.css
testing/: index.html
tests/: conftest.py  test_auth.py  test_auth_flows.py  test_config.py  test_cookie_backend.py  test_crypto.py  test_customization.py  test_dx_improvements.py  test_email_verify.py  test_hooks.py  test_lockout.py  test_middleware.py  test_new_endpoints.py  test_oauth.py  test_passkey.py  test_polish.py  test_profile.py  test_rbac.py  test_refresh_tokens.py  test_roles.py  test_security.py  test_sessions.py  test_sqlalchemy_adapter.py  test_sqlmodel_adapter.py  test_tokens.py
troubleshooting/: index.html
