[project]
name = "fastapi-fullauth"
dynamic = ["version"]
description = "Production-grade, async-native authentication and authorization library for FastAPI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "fastapi",
    "authentication",
    "authorization",
    "security",
    "jwt",
    "argon2",
    "oauth2",
    "rbac",
    "async",
    "pydantic",
    "sqlmodel",
    "sqlalchemy",
    "redis",
    "bcrypt",
    "csrf",
    "refresh-token",
    "password-hashing",
    "role-based-access-control",
    "passkey",
    "webauthn",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.136",
    "pydantic[email]>=2.13",
    "pydantic-settings>=2.14",
    "pyjwt>=2.12",
    "argon2-cffi>=25.1",
    "uuid-utils>=0.14.1",
]

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy[asyncio]>=2.0.49", "alembic>=1.18"]
sqlmodel = ["sqlmodel>=0.0.38", "alembic>=1.18"]
redis = ["redis>=7.4"]
oauth = ["httpx>=0.28"]
passkey = ["webauthn>=2.7"]
all = [
    "sqlalchemy[asyncio]>=2.0.49",
    "alembic>=1.18",
    "sqlmodel>=0.0.38",
    "redis>=7.4",
    "httpx>=0.28",
    "webauthn>=2.7",
]

[project.urls]
Homepage = "https://github.com/mdfarhankc/fastapi-fullauth"
Documentation = "https://mdfarhankc.github.io/fastapi-fullauth"
Repository = "https://github.com/mdfarhankc/fastapi-fullauth"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "fakeredis>=2.35",
    "httpx>=0.28.1",
    "mkdocs-material>=9.7.6",
    "mypy>=2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.1",
    "ruff>=0.15.12",
    "uvicorn>=0.46",
]

[tool.hatch.version]
path = "fastapi_fullauth/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_fullauth"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

# Adapter modules use SQLAlchemy 2.0 / SQLModel column-comparison patterns
# that the upstream stubs don't fully express in strict mode (the column
# descriptor's __eq__ types as bool instead of ColumnElement[bool], etc.).
# Disable the affected error codes only here so the rest of the codebase
# stays strict.
[[tool.mypy.overrides]]
module = [
    "fastapi_fullauth.adapters.sqlmodel",
    "fastapi_fullauth.adapters.sqlalchemy",
]
disable_error_code = [
    "arg-type",
    "attr-defined",
    "assignment",
    "call-arg",
    "call-overload",
    "misc",
    "no-any-return",
    "no-untyped-call",
    "no-untyped-def",
    "union-attr",
    "unused-ignore",
]

[tool.pytest]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:In-memory backends in use:UserWarning",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008", "B904"]
