[project]
name = "fastapi-fullauth"
description = "Production-grade, async-native authentication and authorization library for FastAPI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
  "argon2",
  "async",
  "authentication",
  "authorization",
  "bcrypt",
  "csrf",
  "fastapi",
  "jwt",
  "oauth2",
  "passkey",
  "password-hashing",
  "pydantic",
  "rbac",
  "redis",
  "refresh-token",
  "role-based-access-control",
  "security",
  "sqlalchemy",
  "sqlmodel",
  "webauthn",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Typing :: Typed",
]
dependencies = [
  "argon2-cffi>=25.1.0",
  "fastapi>=0.136.1",
  "pydantic-settings>=2.14.1",
  "pydantic[email]>=2.13.4",
  "pyjwt>=2.12.1",
  "uuid-utils>=0.16.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://mdfarhankc.github.io/fastapi-fullauth"
Homepage = "https://github.com/mdfarhankc/fastapi-fullauth"
Repository = "https://github.com/mdfarhankc/fastapi-fullauth"

[project.scripts]
fullauth = "fastapi_fullauth.cli:main"

[project.optional-dependencies]
bcrypt = ["bcrypt>=4.1.0"]
oauth = ["httpx>=0.28.1"]
passkey = ["webauthn>=2.7.1"]
redis = ["redis>=7.4.0"]
sqlalchemy = ["sqlalchemy[asyncio]>=2.0.49", "alembic>=1.18.4"]
sqlalchemy-standard = ["fastapi-fullauth[sqlalchemy,bcrypt,redis,oauth,passkey]"]
sqlmodel = ["sqlmodel>=0.0.38", "alembic>=1.18.4"]
sqlmodel-standard = ["fastapi-fullauth[sqlmodel,bcrypt,redis,oauth,passkey]"]

[dependency-groups]
dev = [
  "aiosqlite>=0.22.1",
  "bcrypt>=4.1.0",
  "fakeredis>=2.35.1",
  "httpx>=0.28.1",
  "mkdocs-material>=9.7.6",
  "mypy>=2.1.0",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.13",
  "uvicorn>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "fastapi_fullauth/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_fullauth"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

# Adapter modules use SQLAlchemy 2.0 / SQLModel column-comparison patterns
# that the upstream stubs don't fully express in strict mode (the column
# descriptor's __eq__ types as bool instead of ColumnElement[bool], etc.).
# Disable the affected error codes only here so the rest of the codebase
# stays strict.
[[tool.mypy.overrides]]
module = [
  "fastapi_fullauth.adapters._sqlalchemy_base",
  "fastapi_fullauth.adapters.sqlmodel",
  "fastapi_fullauth.adapters.sqlalchemy",
]
disable_error_code = [
  "arg-type",
  "attr-defined",
  "assignment",
  "call-arg",
  "call-overload",
  "misc",
  "no-any-return",
  "no-untyped-call",
  "no-untyped-def",
  "union-attr",
  "unused-ignore",
]

[tool.pytest]
filterwarnings = [
  "ignore:In-memory backends in use:UserWarning",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008", "B904"]
